Changelog
=========


1.0.1 (unreleased)
------------------

- Provide "deploy ssh" command. [jone]


1.0.0 (2018-12-21)
------------------

- Initial implementation. [jone]